Macro/skim/logs/19545448_14.err
input_line_9:2:37: error: expected expression
 FlatMix(14*100000, (14+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                    ^
